--- a/FIRST_MERN_STACK/Frontend/src/Components/ShowMessage.module.css
+++ b/FIRST_MERN_STACK/Frontend/src/Components/ShowMessage.module.css
@@ -18,4 +18,11 @@
   line-height: 1.5;
   text-align: justify;
 }
+.error-message {
+  background-color: #f44336;
+  color: white;
+  padding: 20px;
+  text-align: center;
+  margin-top: 20px;
+}
 
